update readme, license, requirements

--- a/lessons/02_api.ipynb
+++ b/lessons/02_api.ipynb
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install pynytimes"
+    "%pip install pynytimes"
    ]
   },
   {
@@ -912,7 +912,7 @@
    "outputs": [],
    "source": [
     "# Install the vadersentiment library\n",
-    "!pip install vadersentiment"
+    "%pip install vadersentiment"
    ]
   },
   {
@@ -1183,21 +1183,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"Extracts keyword data based on ranking.\n",
-    "\n",
-    "Parameters\n",
-    "----------\n",
-    "data : pd.DataFrame\n",
-    "    The dataframe containing the keywords.\n",
-    "rank : int\n",
-    "    The rank of the keywords to extract.\n",
-    "\n",
-    "Returns\n",
-    "-------\n",
-    "keyword : dict\n",
-    "    A dictionary containing the name and value of the keyword.\n",
-    "\"\"\"\n",
     "def rank_extractor(data, rank):\n",
+    "    \"\"\"Extracts keyword data based on ranking.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    data : pd.DataFrame\n",
+    "        The dataframe containing the keywords.\n",
+    "    rank : int\n",
+    "        The rank of the keywords to extract.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    keyword : dict\n",
+    "        A dictionary containing the name and value of the keyword.\n",
+    "    \"\"\"\n",
     "    # If empty, return None\n",
     "    if data == []:\n",
     "        return None\n",
