add API handling with configparser & getpass

--- a/lessons/02_api.ipynb
+++ b/lessons/02_api.ipynb
@@ -29,7 +29,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b0379359-694d-491c-ba18-fa80ea3c65bc",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Import required libraries\n",
@@ -56,7 +58,7 @@
    "id": "a639eb32-15e0-48fc-9cb5-3bd804fae0f9",
    "metadata": {},
    "source": [
-    "## Establishing the Connection"
+    "## Handling API Keys"
    ]
   },
   {
@@ -64,60 +66,66 @@
    "id": "da084101-19bc-46c1-9722-317d0514da5e",
    "metadata": {},
    "source": [
-    "Put the API Key you just created in the `api_key` variable in the cell below:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5fbdc8b6-a91d-4f07-a98c-2ba3e8b01726",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Put your API key here\n",
-    "api_key = \"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c8f60b12-cced-49b4-9627-2782a75a8429",
-   "metadata": {},
-   "source": [
-    "You can save your API Key locally so that you don't always have to copy it. Just be sure not to put this file on Github, or else your API key may be compromised!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a62d2d57",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save your key locally\n",
-    "with open(\"nyt_api_key.txt\", \"w\") as f:\n",
-    "    f.write(api_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a07ed22e-948c-4b21-990e-50c1a8e8238c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read your key locally\n",
-    "with open(\"nyt_api_key.txt\", \"r\") as f:\n",
-    "    api_key = f.read()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "582ed0ad-ccad-4294-a50f-e1d4843217c6",
-   "metadata": {},
-   "source": [
-    "To access the NYTimes' databases, we'll be using a third-party library called [pynytimes](https://github.com/michadenheijer/pynytimes). This package provides an easy to use tool for accessing the wealth of data hosted by the Times.\n",
+    "API keys are sensitive data! You **do not** want to accidentally check them into a publically shared GitHub repo.\n",
     "\n",
-    "To install the library, follow the instructions taken from their [Github repo](https://github.com/michadenheijer/pynytimes)."
+    "The following cell will:\n",
+    "\n",
+    "1. first try to obtain previously saved credentials by loading with `configparser`;\n",
+    "2. if not found, use `getpass` to request the credentials from the user (which works in notebooks as an input prompt);\n",
+    "3. then save those user-inputted credentials using configparser to `~/.notebook-api-keys` which is outside of the .git controlled directory so it doesn't accidentally get added and checked in.\n",
+    "\n",
+    "Run the following cell and add the API Key you just created when prompted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "17a9823a-4e85-41ff-b321-4f9821359821",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import configparser\n",
+    "import os\n",
+    "from getpass import getpass\n",
+    "\n",
+    "def get_api_key(api_name):\n",
+    "    config_file_path = os.path.expanduser(\"~/.notebook-api-keys\")\n",
+    "    config = configparser.ConfigParser()\n",
+    "    \n",
+    "    # Try reading the existing config file\n",
+    "    if os.path.exists(config_file_path):\n",
+    "        config.read(config_file_path)\n",
+    "    \n",
+    "    # Check if API key is present\n",
+    "    if config.has_option(\"API_KEYS\", api_name):\n",
+    "        return config.get(\"API_KEYS\", api_name)\n",
+    "    \n",
+    "    # If not, prompt the user for the API key\n",
+    "    api_key = getpass(f\"Enter your {api_name} API key: \")\n",
+    "    \n",
+    "    # Save the API key in the config file\n",
+    "    if not config.has_section(\"API_KEYS\"):\n",
+    "        config.add_section(\"API_KEYS\")\n",
+    "    config.set(\"API_KEYS\", api_name, api_key)\n",
+    "    \n",
+    "    with open(config_file_path, \"w\") as f:\n",
+    "        config.write(f)\n",
+    "    \n",
+    "    return api_key\n",
+    "\n",
+    "# Example usage\n",
+    "api_key = get_api_key(\"NYT\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fae52a0a-8e33-4f78-b181-e254fa81eabe",
+   "metadata": {},
+   "source": [
+    "💡 **Tip**: Another way to keep your credentials secure and provide convenient access is through the [JupyterLab Credential Store\n",
+    "](https://towardsdatascience.com/the-jupyterlab-credential-store-9cc3a0b9356). If you are using JupyterLab, this is a great general solution for handling API keys!"
    ]
   },
   {
@@ -125,17 +133,40 @@
    "id": "5f5b395a-443f-4e40-91f7-8fcb5c33bbbe",
    "metadata": {},
    "source": [
-    "## Installation\n",
+    "## Using `pynytimes`\n",
+    "\n",
+    "To access the NYTimes' databases, we'll be using a third-party library called [pynytimes](https://github.com/michadenheijer/pynytimes). This package provides an easy to use tool for accessing the wealth of data hosted by the Times.\n",
+    "\n",
+    "To install the library, follow the instructions taken from their [Github repo](https://github.com/michadenheijer/pynytimes).\n",
     "\n",
     "There are multiple options to install `pynytimes`, but the easiest is by just installing it using `pip` in the Jupyter notebook itself, using a magic command:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d1d80b96-2285-43ab-bbd6-090fd4a9c2d7",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pynytimes\n",
+      "  Downloading pynytimes-0.10.0-py3-none-any.whl (20 kB)\n",
+      "Requirement already satisfied: requests<3.0.0,>=2.10.0 in /Users/tomvannuenen/anaconda3/envs/dlab/lib/python3.10/site-packages (from pynytimes) (2.31.0)\n",
+      "Requirement already satisfied: urllib3 in /Users/tomvannuenen/anaconda3/envs/dlab/lib/python3.10/site-packages (from pynytimes) (2.0.4)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/tomvannuenen/anaconda3/envs/dlab/lib/python3.10/site-packages (from requests<3.0.0,>=2.10.0->pynytimes) (3.2.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/tomvannuenen/anaconda3/envs/dlab/lib/python3.10/site-packages (from requests<3.0.0,>=2.10.0->pynytimes) (3.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/tomvannuenen/anaconda3/envs/dlab/lib/python3.10/site-packages (from requests<3.0.0,>=2.10.0->pynytimes) (2023.7.22)\n",
+      "Installing collected packages: pynytimes\n",
+      "Successfully installed pynytimes-0.10.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install pynytimes"
    ]
@@ -158,9 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "dce57534-fe5d-45a4-bb97-f2df8dc3d9d6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Import the NYTAPI object which we'll use to access the API\n",
@@ -169,9 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "018a6dfa-9343-42b1-9014-165ae7507b0c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Intialize the NYT API class into an object using your API key\n",
@@ -339,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "12c920bc-bf8c-48a4-a34e-d10e4a23476d",
    "metadata": {},
    "outputs": [],
@@ -780,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5dce99e3-4cf1-475e-a7a2-7f545f06d6e3",
    "metadata": {},
    "outputs": [],
@@ -870,8 +905,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "29685d83-c90b-407e-be03-e76c67a6215c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pd.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "cb310d22-895a-4dff-8442-247aa8b02b42",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "df = pd.read_pickle(\"../data/election2020_articles.pkl\")\n",
@@ -1033,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e7a2ebef-41a7-4cc1-a553-a4fc33a3cc57",
    "metadata": {},
    "outputs": [],
@@ -1284,9 +1333,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dlab",
    "language": "python",
-   "name": "python3"
+   "name": "dlab"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1298,7 +1347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
