--- a/lessons/02_api.ipynb
+++ b/lessons/02_api.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "17a9823a-4e85-41ff-b321-4f9821359821",
    "metadata": {
     "tags": []
@@ -144,29 +144,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d1d80b96-2285-43ab-bbd6-090fd4a9c2d7",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pynytimes\n",
-      "  Downloading pynytimes-0.10.0-py3-none-any.whl (20 kB)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.10.0 in /Users/tomvannuenen/anaconda3/envs/dlab/lib/python3.10/site-packages (from pynytimes) (2.31.0)\n",
-      "Requirement already satisfied: urllib3 in /Users/tomvannuenen/anaconda3/envs/dlab/lib/python3.10/site-packages (from pynytimes) (2.0.4)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/tomvannuenen/anaconda3/envs/dlab/lib/python3.10/site-packages (from requests<3.0.0,>=2.10.0->pynytimes) (3.2.0)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in /Users/tomvannuenen/anaconda3/envs/dlab/lib/python3.10/site-packages (from requests<3.0.0,>=2.10.0->pynytimes) (3.4)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in /Users/tomvannuenen/anaconda3/envs/dlab/lib/python3.10/site-packages (from requests<3.0.0,>=2.10.0->pynytimes) (2023.7.22)\n",
-      "Installing collected packages: pynytimes\n",
-      "Successfully installed pynytimes-0.10.0\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install pynytimes"
    ]
@@ -189,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "dce57534-fe5d-45a4-bb97-f2df8dc3d9d6",
    "metadata": {
     "tags": []
@@ -202,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "018a6dfa-9343-42b1-9014-165ae7507b0c",
    "metadata": {
     "tags": []
@@ -905,25 +888,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29685d83-c90b-407e-be03-e76c67a6215c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "pd.__version__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "cb310d22-895a-4dff-8442-247aa8b02b42",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df = pd.read_pickle(\"../data/election2020_articles.pkl\")\n",
+    "df = pd.read_csv(\"../data/election2020_articles.csv\")\n",
     "df.head()"
    ]
   },
