--- a/lessons/02_api.ipynb
+++ b/lessons/02_api.ipynb
@@ -874,7 +874,7 @@
     "    df = pd.json_normalize(articles)\n",
     "\n",
     "    # Save DataFrame\n",
-    "    df.to_pickle(\"election2020_articles.pkl\")"
+    "    df.to_csv(\"../data/election2020_articles.csv\")"
    ]
   },
   {
