shorten lesson md, shorten notebook

--- a/lessons/02_api_NYT.ipynb
+++ b/lessons/02_api_NYT.ipynb
@@ -5,7 +5,7 @@
    "id": "6caa532f-d502-4576-9ee6-5ad88ca0c550",
    "metadata": {},
    "source": [
-    "# Accessing Data via Web APIs\n",
+    "# Python Web APIs: Accessing NYT Data\n",
     "\n",
     "* * * \n",
     "\n",
@@ -92,7 +92,7 @@
     "\n",
     "def get_api_key(api_name):\n",
     "    config_file_path = os.path.expanduser(\"~/.notebook-api-keys\")\n",
-    "    config = configparser.ConfigParser()\n",
+    "    config = configparser.ConfigParser(interpolation=None)  # Disable interpolation to avoid issues with special characters\n",
     "    \n",
     "    # Try reading the existing config file\n",
     "    if os.path.exists(config_file_path):\n",
@@ -100,11 +100,14 @@
     "    \n",
     "    # Check if API key is present\n",
     "    if config.has_option(\"API_KEYS\", api_name):\n",
-    "        return config.get(\"API_KEYS\", api_name)\n",
+    "        # Ask if the user wants to update the key\n",
+    "        update_key = input(f\"An API key for {api_name} already exists. Do you want to update it? (y/n): \").lower()\n",
+    "        if update_key == 'n':\n",
+    "            return config.get(\"API_KEYS\", api_name)\n",
     "    \n",
-    "    # If not, prompt the user for the API key\n",
+    "    # If no key exists or user opts to update, prompt for the new key\n",
     "    api_key = getpass(f\"Enter your {api_name} API key: \")\n",
-    "    \n",
+    "\n",
     "    # Save the API key in the config file\n",
     "    if not config.has_section(\"API_KEYS\"):\n",
     "        config.add_section(\"API_KEYS\")\n",
@@ -115,8 +118,10 @@
     "    \n",
     "    return api_key\n",
     "\n",
-    "# Example usage\n",
-    "api_key = get_api_key(\"NYT\")"
+    "# Example usage to retrieve the NYT API key\n",
+    "api_key = get_api_key(\"NYT\")\n",
+    "\n",
+    "print(\"NYT API key retrieved successfully.\")\n"
    ]
   },
   {
@@ -314,14 +319,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7cc9364-4bb4-477c-989c-97ca2fe0815e",
-   "metadata": {},
-   "source": [
-    "🔔 **Question**: Does anything about the data stand out to you? What bits of information could be useful to you and your research needs?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "6169914c-9e61-459d-acad-67d579cb153d",
    "metadata": {},
    "source": [
@@ -350,9 +347,9 @@
    "source": [
     "## 🥊 Challenge: Find the top stories for a section\n",
     "\n",
-    "- Choose 2 sections. Grab their top stories and store them in two separate lists.\n",
-    "- How many stories are each in section?\n",
-    "- What is the title of the first story in each list?"
+    "- Choose a section. Grab the top stories and store it in a list.\n",
+    "- How many stories are in the section?\n",
+    "- What is the title of the first story?"
    ]
   },
   {
@@ -533,8 +530,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "most_viewed_week = nyt.most_viewed(days=7)\n",
-    "most_viewed_month = nyt.most_viewed(days=30)"
+    "most_viewed_week = nyt.most_viewed(days=7)"
    ]
   },
   {
@@ -553,91 +549,6 @@
    "outputs": [],
    "source": [
     "most_viewed_week[0]['title']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "174a91ba-c09f-4c16-b415-15d501cbb55a",
-   "metadata": {},
-   "source": [
-    "🔔 **Question**: What is the most viewed article of the last month?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74b269e1-d793-49cd-a3b5-2121eb7db26d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "most_viewed_month[0]['title']"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1784d2ab-b5f0-4fb0-8507-8cee3e52e71b",
-   "metadata": {},
-   "source": [
-    "## 🥊 Challenge: Most Shared Stories\n",
-    "\n",
-    "The `most_shared` method is similiar to `most_viewed` except that it has an argument called `method` which is used to show the most shared articles using `'email'` or `'facebook'`.\n",
-    "\n",
-    "- Grab the most shared articles for both methods for the past month.\n",
-    "- How many articles show up in both lists? (Hint: use the `uri` key)\n",
-    "- Bonus: Use the [Shared Article](https://developer.nytimes.com/docs/most-popular-product/1/types/SharedArticle) schema table to help you answer a question you may have about the data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "224416c5-1397-458a-a3e9-30a5dcc29f94",
-   "metadata": {},
-   "source": [
-    "| Attribute      | Data Type | Definition      |\n",
-    "| ----------- | ----------- | ----------- |\n",
-    "| url      | string       | Article's URL.       |\n",
-    "| adx_keywords   | string        | Semicolon separated list of keywords.        |\n",
-    "| subsection   | string        | Article's subsection (e.g. Politics). Can be empty |\n",
-    "| column   | string        | Deprecated. Set to null.        |\n",
-    "| eta_id   | integer        | Deprecated. Set to 0.|\n",
-    "| section   | string        | Article's section (e.g. Sports).        |\n",
-    "| id   | integer        | Asset ID number (e.g. 100000007772696).        |\n",
-    "| asset_id   | integer        | Asset ID number (e.g. 100000007772696).        |\n",
-    "| nytdsection   | string        | Article's section|\n",
-    "| byline   | string        | Article's byline (e.g. By Thomas L. Friedman).        |\n",
-    "| type   | string        | Asset type (e.g. Article, Interactive, ...).        |\n",
-    "| title   | string        | Article's headline (e.g. When the Cellos Play, the Cows Come Home).        |\n",
-    "| abstract   | string        | Brief summary of the article.|\n",
-    "| published_date   | string        | When the article was published on the web (e.g. 2021-04-19).        |\n",
-    "| source   | string        | Publisher (e.g. New York Times).        |\n",
-    "| updated   | string        | When the article was last updated (e.g. 2021-05-12 06:32:03).|\n",
-    "| des_facet   | array        | Array of description facets (e.g. Quarantine (Life and Culture)).        |\n",
-    "| org_facet   | array        | Array of organization facets (e.g. Sullivan Street Bakery).        |\n",
-    "| per_facet   | array        | Array of person facets (e.g. Bittman, Mark).        |\n",
-    "| geo_facet   | array        | Array of geographic facets (e.g. Canada).        |\n",
-    "| media   | array        | Array of images.        |\n",
-    "| media.type   | string        | Asset type (e.g. image).        |\n",
-    "| media.subtype   | string        | Asset subtype (e.g. photo).        |\n",
-    "| media.caption   | string        | Media caption        |\n",
-    "| media.copyright   | string        | Media credit        |\n",
-    "| media.approved_for_syndication   | boolean        | Whether media is approved for syndication.        |\n",
-    "| media.media-metadata   | array        | Media metadata (url, width, height, ...).        |\n",
-    "| media.media-metadata.url   | string        | Image's URL.        |\n",
-    "| media.media-metadata.format   | string        | Image's crop name     |\n",
-    "| media.media-metadata.height   | integer        | Image's height |\n",
-    "| media.media-metadata.width   | integer        | Image's width      |\n",
-    "| uri   | string        | An article's globally unique identifier.      |"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5f49694-4e4d-40b9-a19f-e873c7107b56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# YOUR CODE HERE\n",
-    "\n",
-    "\n"
    ]
   },
   {
@@ -714,7 +625,7 @@
    "source": [
     "Notice that not all article data comes in the same format. Data from the search API is presented differently from that of the Most Viewed and Top Stories APIs.\n",
     "\n",
-    "There are schemas for the above data. Unfortunately, they do not have definitions.\n",
+    "There are schemas for the above data. \n",
     "\n",
     "- [Article Schema](https://developer.nytimes.com/docs/articlesearch-product/1/types/Article)\n",
     "- [Byline](https://developer.nytimes.com/docs/articlesearch-product/1/types/Byline)\n",
@@ -729,7 +640,7 @@
    "id": "cb7fb990-96de-49dd-9611-4b798884321a",
    "metadata": {},
    "source": [
-    "Let's try this again, but for a specific time period. \n",
+    "Let's search for some articles again, but within a specific time period. \n",
     "\n",
     "For example, how would we retrieve all the articles about the first two months of the George Floyd protests?\n",
     "\n",
@@ -771,7 +682,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8c39a319-9185-4740-99c0-f34c437b6e47",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Grab first article and drop the multimedia key to reduce clutter\n",
@@ -790,10 +703,7 @@
     "## 🥊 Challenge: Article Searching\n",
     "\n",
     "- Retrieve a set of articles for a query of your choice.\n",
-    "- Use a relevant time interval in constructing your `dates` dictionary\n",
-    "- Use `type_of_material` and `section_name` as keys in your `options` dictionary.\n",
-    "    - For `type_of_material` values refer to this [list](https://github.com/michadenheijer/pynytimes/blob/main/VALID_SEARCH_OPTIONS.md#type-of-material-values).\n",
-    "    - For `section_name` values refer to this [list](https://github.com/michadenheijer/pynytimes/blob/main/VALID_SEARCH_OPTIONS.md#section-name-values)."
+    "- Use a relevant time interval in constructing your `dates` dictionary"
    ]
   },
   {
@@ -872,7 +782,10 @@
     "\n",
     "    # Create DataFrame \n",
     "    df = pd.json_normalize(articles)\n",
-    "\n",
+    "    \n",
+    "    # Ensure 'lead_paragraph' column has no NaN \n",
+    "    df['lead_paragraph'] = df['lead_paragraph'].fillna('')\n",
+    "    \n",
     "    # Save DataFrame\n",
     "    df.to_csv(\"../data/election2020_articles.csv\")"
    ]
@@ -902,7 +815,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "65e4aa87-5f4b-42c6-8f6a-c252e91cdc60",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Inspect metadata\n",
@@ -954,8 +869,8 @@
    "source": [
     "# Initialize analyzer object\n",
     "analyzer = SentimentIntensityAnalyzer()\n",
-    "# Calculate the polarity scores of the lead paragraph and save it in df\n",
-    "df[\"sentiment\"] = df.lead_paragraph.apply(analyzer.polarity_scores)"
+    "# Calculate the polarity scores of the lead paragraph \n",
+    "df[\"sentiment\"] = df[\"lead_paragraph\"].apply(lambda x: analyzer.polarity_scores(x) if isinstance(x, str) else np.nan)"
    ]
   },
   {
@@ -1004,7 +919,7 @@
    "outputs": [],
    "source": [
     "# Re-assign sentiment as the compound score\n",
-    "df[\"sentiment\"] = df[\"sentiment\"].apply(lambda x: x[\"compound\"])"
+    "df[\"sentiment\"] = df[\"sentiment\"].apply(lambda x: x[\"compound\"] if isinstance(x, dict) else np.nan)"
    ]
   },
   {
@@ -1045,10 +960,9 @@
    "id": "65a407db-1bbf-4ae4-ad07-7a10bdaf2ae9",
    "metadata": {},
    "source": [
-    "## 🥊 Challenge: Additional Data Analysis\n",
+    "## 🥊 Challenge: Most Positive, Most Negative\n",
     "\n",
-    "- What are the 3 most positive and negative texts?\n",
-    "- Using the VADER thresholds for positive, neutral, and negative, how many articles qualify for each of those labels?"
+    "What are the top 3 most positive and negative texts? Tip: try using the `sort_values()` method on the \"sentiment\" column in your df!"
    ]
   },
   {
@@ -1061,6 +975,33 @@
     "# YOUR CODE HERE\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f889b643-e6b1-406c-b320-eaafa278a3c0",
+   "metadata": {},
+   "source": [
+    "Finally, using the VADER thresholds for positive, neutral, and negative, we can see how many articles qualify for each of those labels:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bac1185-a853-4f2f-8fd5-eb36d8af1821",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Proportion of positive, negative, and neutral texts\n",
+    "def bin_func(x):\n",
+    "    if x > 0.05:\n",
+    "        return \"positive\"\n",
+    "    elif x < -.05:\n",
+    "        return \"negative\"\n",
+    "    else:\n",
+    "        return \"neutral\"\n",
+    "# Calculate counts\n",
+    "df.sentiment.apply(bin_func).value_counts()"
    ]
   },
   {
@@ -1079,6 +1020,17 @@
     "Let's examine how the compound score evolved over the course of the campaign. Do you have expectations on how this quantity might behave as the election nears? \n",
     "\n",
     "First, let's create a new `pandas` series which tracks the sentiment over time:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d16393da-bd5b-4042-b07c-568b659015b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change pub_date to DatetimeIndex format\n",
+    "df[\"pub_date\"] = pd.to_datetime(df[\"pub_date\"])"
    ]
   },
   {
@@ -1198,39 +1150,49 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "08391288-be34-4e06-9195-f5db61c37f15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ast\n",
+    "\n",
+    "# Convert the string representation of the list into actual lists of dictionaries\n",
+    "df['keywords'] = df['keywords'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5fee0d3-11a4-4cf6-99da-cf7067630c74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"keywords\"].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "04b1fede-fd8c-432c-b1e1-2a805a1e9b87",
    "metadata": {},
    "outputs": [],
    "source": [
     "def rank_extractor(data, rank):\n",
-    "    \"\"\"Extracts keyword data based on ranking.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    data : pd.DataFrame\n",
-    "        The dataframe containing the keywords.\n",
-    "    rank : int\n",
-    "        The rank of the keywords to extract.\n",
-    "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    keyword : dict\n",
-    "        A dictionary containing the name and value of the keyword.\n",
-    "    \"\"\"\n",
-    "    # If empty, return None\n",
-    "    if data == []:\n",
-    "        return None\n",
-    "    # Iterate over the list of keywords until you reach the keyword corresponding with the ranking\n",
-    "    for keyword in data:\n",
-    "        if keyword[\"rank\"] == rank:\n",
-    "            return {\"name\": keyword[\"name\"], \"value\": keyword[\"value\"]}"
+    "    \"\"\"Extracts keyword data based on the 'rank' field.\"\"\"\n",
+    "    if isinstance(data, list):\n",
+    "        for keyword in data:\n",
+    "            if isinstance(keyword, dict) and keyword.get(\"rank\") == rank:\n",
+    "                return {\"name\": keyword.get(\"name\"), \"value\": keyword.get(\"value\")}\n",
+    "    return None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d701072e-8d36-4cab-9ee5-f58e8aed62b6",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Extract the first, second, and third keywords\n",
@@ -1299,6 +1261,23 @@
    "source": [
     "# The most common keywords in ranking #1:\n",
     "rank1.value.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ebed890-3232-4399-ac6d-ebefc948f6d8",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "\n",
+    "## ❗ Key Points\n",
+    "\n",
+    "* APIs allow structured web interactions, often using URLs to query databases and retrieve data.\n",
+    "* API keys authenticate users, enabling access to APIs while monitoring and limiting the number of requests.\n",
+    "* The NYT API allows users to do things like retrieve top stories, find most shared stories, and search for stories.\n",
+    "* Text data acquired through APIs can be analyzed using natural language processing tools such as sentiment analysis.\n",
+    "  \n",
+    "</div>"
    ]
   }
  ],
