--- a/solutions/02_api_NYT_solutions.ipynb
+++ b/solutions/02_api_NYT_solutions.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b0379359-694d-491c-ba18-fa80ea3c65bc",
    "metadata": {},
    "outputs": [],
@@ -25,35 +25,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5fbdc8b6-a91d-4f07-a98c-2ba3e8b01726",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "An API key for NYT already exists. Do you want to update it? (y/n):  n\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NYT API key retrieved successfully.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Put your API key here\n",
-    "api_key = \"\""
+    "import configparser\n",
+    "import os\n",
+    "from getpass import getpass\n",
+    "\n",
+    "def get_api_key(api_name):\n",
+    "    config_file_path = os.path.expanduser(\"~/.notebook-api-keys\")\n",
+    "    config = configparser.ConfigParser(interpolation=None)  # Disable interpolation to avoid issues with special characters\n",
+    "    \n",
+    "    # Try reading the existing config file\n",
+    "    if os.path.exists(config_file_path):\n",
+    "        config.read(config_file_path)\n",
+    "    \n",
+    "    # Check if API key is present\n",
+    "    if config.has_option(\"API_KEYS\", api_name):\n",
+    "        # Ask if the user wants to update the key\n",
+    "        update_key = input(f\"An API key for {api_name} already exists. Do you want to update it? (y/n): \").lower()\n",
+    "        if update_key == 'n':\n",
+    "            return config.get(\"API_KEYS\", api_name)\n",
+    "    \n",
+    "    # If no key exists or user opts to update, prompt for the new key\n",
+    "    api_key = getpass(f\"Enter your {api_name} API key: \")\n",
+    "\n",
+    "    # Save the API key in the config file\n",
+    "    if not config.has_section(\"API_KEYS\"):\n",
+    "        config.add_section(\"API_KEYS\")\n",
+    "    config.set(\"API_KEYS\", api_name, api_key)\n",
+    "    \n",
+    "    with open(config_file_path, \"w\") as f:\n",
+    "        config.write(f)\n",
+    "    \n",
+    "    return api_key\n",
+    "\n",
+    "# Example usage to retrieve the NYT API key\n",
+    "api_key = get_api_key(\"NYT\")\n",
+    "\n",
+    "print(\"NYT API key retrieved successfully.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "087578c4",
-   "metadata": {},
+   "execution_count": 19,
+   "id": "5af27a72-5ed3-4d4a-87bb-0253210262aa",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "# Or, read your key locally\n",
-    "path_to_key = \"\"\n",
-    "with open(path_to_key, \"r\") as f:\n",
-    "    api_key = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28113bf5-ef1c-4f29-9256-bc237804bdd4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Intialize the NYT API class into an object using your API key\n",
     "nyt = NYTAPI(api_key, parse_dates=True)"
    ]
   },
@@ -62,19 +101,27 @@
    "id": "cc28bc7d-d3dd-48ff-99d8-20b9db7046b0",
    "metadata": {},
    "source": [
-    "## Challenge: Find the top stories for a section\n",
+    "## 🥊 Challenge: Find the top stories for a section\n",
     "\n",
-    "- Choose 2 sections. Grab their top stories and store them in two separate lists.\n",
-    "- How many stories are each in section?\n",
-    "- What is the title of the first story in each list?"
+    "- Choose a section. Grab the top stories and store it in a list.\n",
+    "- How many stories are in the section?\n",
+    "- What is the title of the first story?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "12c920bc-bf8c-48a4-a34e-d10e4a23476d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 9 sports stories.\n"
+     ]
+    }
+   ],
    "source": [
     "# Sports\n",
     "section = \"sports\"\n",
@@ -84,55 +131,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "69aa8254-618d-41a9-88ee-f3a2fde7ef8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The N.B.A. Season Begins Tonight. Here Are Some Bold Predictions.'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Grab first story\n",
     "top_sport_story = top_sports_stories[0]\n",
     "top_sport_story_title = top_sport_story[\"title\"]\n",
     "top_sport_story_title"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c7eae7e-a977-4345-b73c-bf323c0220ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Technology\n",
-    "section = \"technology\"\n",
-    "top_tech_stories = nyt.top_stories(section=section)\n",
-    "print(f\"There are {len(top_tech_stories)} {section} stories\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f3526fd-cef3-45a0-a536-36e407eff1f6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Grab first story\n",
-    "top_tech_story = top_tech_stories[0]\n",
-    "top_tech_story_title = top_tech_story[\"title\"]\n",
-    "top_tech_story_title"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1784d2ab-b5f0-4fb0-8507-8cee3e52e71b",
-   "metadata": {},
-   "source": [
-    "## Challenge: Most Shared Stories\n",
-    "\n",
-    "The `most_shared` method is similiar to `most_viewed` except that it has an argument called `method` which is used to show the most shared articles using `'email'` or `'facebook'`.\n",
-    "\n",
-    "- Grab the most shared articles for both methods for the past month.\n",
-    "- How many articles show up in both lists? (Hint: use the `uri` key)\n",
-    "- Bonus: Use the [Shared Article](https://developer.nytimes.com/docs/most-popular-product/1/types/SharedArticle) schema table to help you answer a question you may have about the data."
    ]
   },
   {
@@ -216,7 +234,7 @@
    "id": "c33ad4d2-d283-466b-a395-b56fd9817a3a",
    "metadata": {},
    "source": [
-    "## Challenge: Article Searching\n",
+    "## 🥊 Challenge: Article Searching\n",
     "\n",
     "- Retrieve a set of articles for a query of your choice.\n",
     "- Use a relevant time interval in constructing your `dates` dictionary\n",
@@ -227,10 +245,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "5dce99e3-4cf1-475e-a7a2-7f545f06d6e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/tomvannuenen/anaconda3/envs/dlab/lib/python3.10/site-packages/pynytimes/helpers/article_search.py:33: UserWarning: Asking for a lot of results, because of rate limits it can take a while.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Example: query about COVID in the first 6 months of the pandemic\n",
     "query = \"COVID-19\"\n",
@@ -260,10 +287,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "0fad4c2a-2187-43f9-b820-0d3f9356de14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 articles about COVID-19.\n",
+      "Couple Tests Positive for Coronavirus After Returning From Vacation in Hawaii\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"{len(articles)} articles about {query}.\")\n",
     "# Print first article title\n",
@@ -275,35 +311,49 @@
    "id": "65a407db-1bbf-4ae4-ad07-7a10bdaf2ae9",
    "metadata": {},
    "source": [
-    "## Challenge. Additional Data Analysis\n",
+    "## 🥊 Challenge: Most Positive, Most Negative\n",
     "\n",
-    "- What are the 3 most positive and negative texts?\n",
-    "- Using the VADER thresholds for positive, neutral, and negative, how many articles qualify for each of those labels?"
+    "What are the top 3 most positive and negative texts? Tip: try using the `sort_values()` method on the \"sentiment\" column in your df!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4a79529a-3211-4dd9-bcd5-60fb76ca1766",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyprojroot import here\n",
+    "import pandas as pd\n",
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
-    "df = pd.read_pickle(here(\"data/election2020_articles.pkl\"))\n",
+    "import numpy as np \n",
+    "\n",
+    "df = pd.read_csv(\"../data/election2020_articles.csv\")\n",
     "# Initialize analyzer object\n",
     "analyzer = SentimentIntensityAnalyzer()\n",
     "# Calculate the polarity scores of the lead paragraph and save it in df\n",
-    "df[\"sentiment\"] = df.lead_paragraph.apply(analyzer.polarity_scores)\n",
-    "df[\"sentiment\"] = df[\"sentiment\"].apply(lambda x: x[\"compound\"])"
+    "df[\"sentiment\"] = df[\"lead_paragraph\"].apply(lambda x: analyzer.polarity_scores(x) if isinstance(x, str) else np.nan)\n",
+    "df[\"sentiment\"] = df[\"sentiment\"].apply(lambda x: x[\"compound\"] if isinstance(x, dict) else np.nan)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f667a3f5-64e0-490c-bd0f-ed291f977e12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['How the Black Vote Became a Monolith',\n",
+       " 'Podcasts to Inform Your Vote',\n",
+       " 'Having Made Peace Abroad, Ethiopia’s Leader Goes to War at Home']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Most positive texts\n",
     "df.sort_values(\"sentiment\", ascending = False)[\"headline.main\"].iloc[:3].tolist()"
@@ -311,40 +361,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9a90a0d3-e481-44b3-ac08-cf5af46db142",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['How Trump’s ‘Voter Fraud’ Lie Is Disenfranchising Americans',\n",
+       " 'At the End of a Chaotic Campaign, an Election Day That Defied the Worst Fears',\n",
+       " 'Days From Election, Police Killing of Black Man Roils Philadelphia']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Most negative texts\n",
     "df.sort_values(\"sentiment\", ascending = True)[\"headline.main\"].iloc[:3].tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ffec001-f59b-4f95-a7fc-acd9eb012e24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Proportion of positive, negative, and neutral texts\n",
-    "def bin_func(x):\n",
-    "    if x > 0.05:\n",
-    "        return \"positive\"\n",
-    "    elif x < -.05:\n",
-    "        return \"negative\"\n",
-    "    else:\n",
-    "        return \"neutral\"\n",
-    "# Calculate counts\n",
-    "df.sentiment.apply(bin_func).value_counts()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "dlab",
    "language": "python",
-   "name": "python3"
+   "name": "dlab"
   },
   "language_info": {
    "codemirror_mode": {
@@ -356,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
